; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap.c_pcap_do_addexit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap.c_pcap_do_addexit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@did_atexit = common dso_local global i32 0, align 4
@pcap_close_all = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"atexit failed\00", align 1
@PCAP_ERRBUF_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcap_do_addexit(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load i32, i32* @did_atexit, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %17, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @pcap_close_all, align 4
  %8 = call i64 @atexit(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %6
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @PCAP_ERRBUF_SIZE, align 4
  %15 = call i32 @strlcpy(i32 %13, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %14)
  store i32 0, i32* %2, align 4
  br label %18

16:                                               ; preds = %6
  store i32 1, i32* @did_atexit, align 4
  br label %17

17:                                               ; preds = %16, %1
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @atexit(i32) #1

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
